缴费记录界面优化完成

--- a/pages/school/finance/component/feeRecord/feeRecord.wxss
+++ b/pages/school/finance/component/feeRecord/feeRecord.wxss
@@ -1,4 +1,7 @@
 /* pages/school/finance/component/feeRecord.wxss */
+page {
+  background-color: var(--cyan);
+}
 .cu-list.menu-avatar.comment>.cu-item {
-  padding: 30rpx 30rpx 30rpx 50rpx;
+  padding: 30rpx 30rpx 0rpx 50rpx;
 }
