--- a/pages/school/finance/bind.wxml
+++ b/pages/school/finance/bind.wxml
@@ -5,10 +5,10 @@
   </view>
   <block wx:else>
     <view>
-      <image class="title" src="https://upload-images.jianshu.io/upload_images/4697920-7943cb09db67e047.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240"></image>
+      <image class="title" src="https://gd-filems.dancf.com/mcm79j/mcm79j/51560/6cac4a24-bd1e-4c38-b69c-7e132085e4a07375186.png"></image>
       <view class="content">
         <view class="hd" style="transform:rotateZ({{angle}}deg);">
-          <image class="logo" src="https://upload-images.jianshu.io/upload_images/4697920-1569c214344ae91b.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240"></image>
+          <image class="logo" src="https://gd-filems.dancf.com/mcm79j/mcm79j/51560/9122bc2c-102b-4e54-9ad0-6ede8036e28a7248271.png"></image>
           <image class="wave" src="/images/wave.png" mode="aspectFill"></image>
           <image class="wave wave-bg" src="/images/wave.png" mode="aspectFill"></image>
         </view>
@@ -24,7 +24,7 @@
             </view>
             <view class="input-group {{vcode_focus ? 'active' : ''}}">
               <text class="input-label">验证码</text>
-              <input id='vcode' name='vcode' type='text' cursor-spacing="30" placeholder="输入验证码" bindfocus="inputFocus" bindblur="inputBlur" />
+              <input id='vcode' bindinput='vcodeInput' name='vcode' type='number' cursor-spacing="30" placeholder="输入验证码" bindfocus="inputFocus" bindblur="inputBlur" />
               <view class="weui-cell__ft">
                 <image class="weui-vcode-img" src="{{cookieInfo.vcode}}" style="width: 90px;height:25px;"></image>
               </view>
